2001-11-01 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot was completely reestructured.

2001-06-12 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot.py: Now breaking long lines. Other minor changes.
	* modulecontrol.py: Removing module entry, even if the unload fails.

2001-05-22 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/uptime.py: New module.

2001-05-16 Gustavo Niemeyer <niemeyer@conectiva.com>
	* Implemented ModuleMethods. This is a class to handle plugable
	  methods. Every module is now using it instead of assigning
	  methods to the Pybot class.
	* modules/{freshmeat,appwatch,messages,notes,userdata}.py:
	  New modules.
	* modules/timer.py: Changed delay system to use time.time() instead
	  of decreasing the time to 0.
	* modules/ignore.py: Fixed dontignore().
	* modules/options.py: Fixed setting of empty ([] and {}) options.
	* modules/social.py: A few new socializations.

2001-05-15 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot.py:
	  - Now using a re to check if a message is directed to the bot.
	  - Implemented msg.answertarget.

2001-04-29 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/*: Changed modules to use setdefault() when getting
	  options from option hash.
	* modules/*: Removed '_' prefix from data members of modules,
	  since the module will never be called from outside explicitly.
	* modules/{userdata,plock,messages}.py: Implemented new modules.

2001-04-28 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/ctcp.py: Fixed rawmsg handling.
	* modules/forward.py: Fixed miscelaneous bugs.
	* modules/options.py: Fixed bug when setting a new option.
	* modules/ping.py: Increased pong message priority.
	* modules/servercontrol.py: Increased priority of server admin
	  messages.
	* modules/social.py: Avoid send hello messages for the same user
	  twice in a short time.
	* modules/timer.py: Implemented threaded timers.

2001-04-25 Gustavo Niemeyer <niemeyer@conectiva.com>